--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.12.2",
     "moment": "^2.30.1",
     "motion": "^12.23.24",
     "quill": "^2.0.3",
